# fimshfreezer

./: Cargo.toml  config.toml  index.html.1
src/: main.rs
static/: index.html
