[package]
name = "fimshfreezer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
async-std = "1.12.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
serde = {version = "1.0.190" , features = ["derive"]}
toml = "0.8.6"
