[package]
name = "fimshfreezer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
futures-util = "0.3.29"
tokio = {version = "1.33.0" , features = ["full"]}
tokio-util = {version = "0.7.10" , features = ["io"]}
tower-http = {version = "0.4.4" , features = ["fs"]}
